[package]
name = "kyoto_main"
version = "0.1.0"
authors = ["jiachenbai"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Data module for kyoto"
homepage = "https://github.com/JeepYiheihou/kyoto_main"
repository = "https://github.com/JeepYiheihou/kyoto_main"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kyoto-server"
path = "src/kyoto_server.rs"

[dependencies]
kyoto_data = "0.1.0"
kyoto_network = "0.1.0"
kyoto_protocol = "0.1.0"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"